infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: express-nest-app
  labels:
    name: express-nest-app
